fixes for sigar, get pid, and unit tests